--- a/_publications/2020-10-01-3D-accv.md
+++ b/_publications/2020-10-01-3D-accv.md
@@ -1,10 +1,10 @@
 ---
 title: "Mapping of Sparse 3D Data using Alternating Projection"
 collection: publications
-permalink: /publication/2021-3D-accv
+permalink: /publication/2020-10-01-3D-accv
 excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
-date: 2015-10-01
-venue: 'Journal 1'
+date: 2020-10-01
+venue: 'ACCV 2020'
 paperurl: 'http://yuxwind.github.io/files/3D-accv.pdf'
 citation: 'Ranade, S., Yu, X., Kakkar, S., Miraldo, P. and Ramalingam, S., 2020. Mapping of Sparse 3D Data using Alternating Projection. In Proceedings of the Asian Conference on Computer Vision.'
 ---
@@ -18,7 +18,6 @@ Sparse 3D Data using Alternating Projection. In Proceedings of the Asian
 Conference on Computer Vision.
 
 Bibtex:
-
-<code>
-
-</code>
+```
+TO ADD
+```
