--- a/_publications/2022_icml.md
+++ b/_publications/2022_icml.md
@@ -17,7 +17,7 @@ Machine Learning (ICML 2022).'
 
 Recommended citation: Serra, T., Kumar, A. and Ramalingam, S., 2021. Scaling Up Exact Neural Network
 Compression by ReLU Stability. arXiv preprint arXiv:2102.07804. --->
-[Paper](http://yuxwind.github.io/files/pruning-nips2021.pd) 
+[Paper](http://yuxwind.github.io/files/2022_icml.pdf) 
 
 Bibtex:
 ```
