--- a/_publications/2022_icml.md
+++ b/_publications/2022_icml.md
@@ -3,7 +3,7 @@ title: "The Combinatorial Brain Surgeon: Pruning Weights That Cancel One Another
 collection: publications
 permalink: /publication/2022_icml
 
-date: 2022
+date: 2022-07-17
 venue: 'ICML'
 paperurl: 'http://yuxwind.github.io/files/2022_icml.pdf'
 citation: 'Yu X.*, Serra T.*, Ramalingam S., Zhe S. The Combinatorial Brain Surgeon: Pruning
