--- a/_publications/2022_icml.md
+++ b/_publications/2022_icml.md
@@ -6,7 +6,7 @@ permalink: /publication/2022_icml
 date: 2022-07-17
 venue: 'ICML'
 paperurl: 'http://yuxwind.github.io/files/2022_icml.pdf'
-citation: 'Yu X.*, Serra T.*, Ramalingam S., Zhe S. The Combinatorial Brain Surgeon: Pruning
+citation: 'Yu X.\*, Serra T.\*, Ramalingam S., Zhe S. The Combinatorial Brain Surgeon: Pruning
 Weights That Cancel One Another in Neural Networks. In International Conference on
 Machine Learning (ICML 2022).'
 ---
@@ -24,7 +24,7 @@ Bibtex:
 @inproceedings{yu2022cbs,
   title={The Combinatorial Brain Surgeon:
 Pruning Weights That Cancel One Another in Neural Networks},
-  author={{Xin Yu*} and {Thiago Serra*} and {Ramalingam Srikumar} and {Shandian  Zhe}},
+  author={{Xin Yu\*} and {Thiago Serra\*} and {Ramalingam Srikumar} and {Shandian  Zhe}},
   booktitle={ICML},
   year={2022}
 }
