--- a/_publications/2022_icml.md
+++ b/_publications/2022_icml.md
@@ -24,7 +24,7 @@ Bibtex:
 @inproceedings{yu2022cbs,
   title={The Combinatorial Brain Surgeon:
 Pruning Weights That Cancel One Another in Neural Networks},
-  author={{Xin Yu} and {Thiago Serra} and {Ramalingam Srikumar} and {Shandian  Zhe}},
+  author={Xin Yu and Thiago Serra and Ramalingam Srikumar and Shandian  Zhe},
   booktitle={ICML},
   year={2022}
 }
