--- a/_publications/2021_3dv.md
+++ b/_publications/2021_3dv.md
@@ -3,7 +3,7 @@ title: "Joint 3D Human Shape Recovery and Pose Estimation from A Single Image wi
 collection: publications
 permalink: /publication/2021_3DV
 
-date: 2021-
+date: 2021-12-01
 venue: '3DV'
 paperurl: 'http://yuxwind.github.io/files/2021_3dv.pdf'
 citation: 'Yu X., & Baar J, Chen S. Joint 3D Human Shape Recovery and Pose Estimation from
