--- a/_publications/2018-10-01-pruning-cvpr2018.md
+++ b/_publications/2018-10-01-pruning-cvpr2018.md
@@ -7,7 +7,7 @@ excerpt: 'We hypothesize that it is easier to optimize the residual mapping than
 date: 2018-10-01
 venue: 'CVPR'
 paperurl: 'http://yuxwind.github.io/files/pruning-cvpr2018.pdf'
-citation: 'Yu, X., Yu, Z. and Ramalingam, S., 2018. Learning strict identity
+citation: '<b>Yu, X.</b>, Yu, Z. and Ramalingam, S., 2018. Learning strict identity
 mappings in deep residual networks. In Proceedings of the IEEE Conference on
 Computer Vision and Pattern Recognition (pp. 4432-4440)'
 ---
@@ -30,7 +30,7 @@ In some instances, we achieve about 80% reduction in the number of parameters.
 
 [Download paper here](http://yuxwind.github.io/files/pruning-cvpr2018.pdf)
 
-Recommended citation:  Yu, X., Yu, Z. and Ramalingam, S., 2018. Learning strict identity mappings in
+Recommended citation:  </b>Yu, X.<b>, Yu, Z. and Ramalingam, S., 2018. Learning strict identity mappings in
 deep residual networks. In Proceedings of the IEEE Conference on Computer Vision
 and Pattern Recognition (pp. 4432-4440).
 
