--- a/_publications/2018-10-01-vlase-iros18.md
+++ b/_publications/2018-10-01-vlase-iros18.md
@@ -11,7 +11,7 @@ citation: '<b>Yu, X.</b>, Chaturvedi, S., Feng, C., Taguchi, Y., Lee, T.Y., Fern
 
 [Download paper here](http://yuxwind.github.io/files/vlase-iros2018.pdf)
 
-Recommended citation:  Yu, X., Chaturvedi, S., Feng, C., Taguchi, Y., Lee, T.Y., Fernandes, C. and Ramalingam, S., 2018, October. Vlase: Vehicle localization by aggregating semantic edges. In 2018 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (pp. 3196-3203). IEEE.
+Recommended citation:  <b>,Yu, X.</b>,, Chaturvedi, S., Feng, C., Taguchi, Y., Lee, T.Y., Fernandes, C. and Ramalingam, S., 2018, October. Vlase: Vehicle localization by aggregating semantic edges. In 2018 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (pp. 3196-3203). IEEE.
 
 
 Bibtex:
