--- a/_publications/2021_3dv.md
+++ b/_publications/2021_3dv.md
@@ -6,7 +6,7 @@ permalink: /publication/2021_3DV
 date: 2021-12-01
 venue: '3DV'
 paperurl: 'http://yuxwind.github.io/files/2021_3dv.pdf'
-citation: 'Yu X., & Baar J, Chen S. Joint 3D Human Shape Recovery and Pose Estimation from
+citation: '<b>Yu X.</b>, & Baar J, Chen S. Joint 3D Human Shape Recovery and Pose Estimation from
 A Single Image with Bilayer-Graph. in International Conference on 3D Vision (3DV 2021)'
 ---
 <!--- excerpt: 'This paper is about the number 3. The number 4 is left for future work.' --->
