--- a/_publications/2022_icml.md
+++ b/_publications/2022_icml.md
@@ -6,7 +6,7 @@ permalink: /publication/2022_icml
 date: 2022-07-17
 venue: 'ICML'
 paperurl: 'http://yuxwind.github.io/files/2022_icml.pdf'
-citation: 'Yu X.\*, Serra T.\*, Ramalingam S., Zhe S. The Combinatorial Brain Surgeon: Pruning
+citation: '<b>Yu X.*</b>, Serra T.*, Ramalingam S., Zhe S. The Combinatorial Brain Surgeon: Pruning
 Weights That Cancel One Another in Neural Networks. In International Conference on
 Machine Learning (ICML 2022).'
 ---
@@ -15,16 +15,17 @@ Machine Learning (ICML 2022).'
 
 <!--- [Download paper here](http://yuxwind.github.io/files/pruning-nips2021.pdf) 
 
-Recommended citation: Serra, T., Kumar, A. and Ramalingam, S., 2021. Scaling Up Exact Neural Network
-Compression by ReLU Stability. arXiv preprint arXiv:2102.07804. --->
+Recommended citation: --->
+
 [Paper](http://yuxwind.github.io/files/2022_icml.pdf) 
+
 
 Bibtex:
 ```
 @inproceedings{yu2022cbs,
   title={The Combinatorial Brain Surgeon:
 Pruning Weights That Cancel One Another in Neural Networks},
-  author={Xin Yu and Thiago Serra and Ramalingam Srikumar and Shandian  Zhe},
+  author={Xin Yu* and Thiago Serra* and Ramalingam Srikumar and Shandian  Zhe},
   booktitle={ICML},
   year={2022}
 }
