--- a/_publications/2020-10-01-3D-accv.md
+++ b/_publications/2020-10-01-3D-accv.md
@@ -6,13 +6,13 @@ excerpt: 'This paper is about the number 3. The number 4 is left for future work
 date: 2020-10-01
 venue: 'ACCV'
 paperurl: 'http://yuxwind.github.io/files/3D-accv.pdf'
-citation: 'Ranade, S.*, </b>,Yu, X.*</b>, Kakkar, S., Miraldo, P. and Ramalingam, S., 2020. Mapping of Sparse 3D Data using Alternating Projection. In Proceedings of the Asian Conference on Computer Vision.'
+citation: 'Ranade, S.*, </b>,Yu, X.</b>*, Kakkar, S., Miraldo, P. and Ramalingam, S., 2020. Mapping of Sparse 3D Data using Alternating Projection. In Proceedings of the Asian Conference on Computer Vision.'
 ---
 
 [Download paper here](http://yuxwind.github.io/files/3D-accv.pdf)
 
 Recommended citation:
-Ranade, S.*, </b>,Yu, X.*</b>, Kakkar, S., Miraldo, P. and Ramalingam, S., 2020. Mapping of
+Ranade, S.*, </b>,Yu, X.</b>*, Kakkar, S., Miraldo, P. and Ramalingam, S., 2020. Mapping of
 Sparse 3D Data using Alternating Projection. In Proceedings of the Asian
 Conference on Computer Vision.
 
