--- a/_publications/2018-10-01-pruning-cvpr2018.md
+++ b/_publications/2018-10-01-pruning-cvpr2018.md
@@ -9,7 +9,7 @@ venue: 'CVPR'
 paperurl: 'http://yuxwind.github.io/files/pruning-cvpr2018.pdf'
 citation: '<b>Yu, X.</b>, Yu, Z. and Ramalingam, S., 2018. Learning strict identity
 mappings in deep residual networks. In Proceedings of the IEEE Conference on
-Computer Vision and Pattern Recognition (pp. 4432-4440)'
+Computer Vision and Pattern Recognition (pp. 4432-4440) (CVPR 2018)'
 ---
 
 A family of super deep networks, referred to as residual networks or
