--- a/_publications/2018-10-01-vlase-iros18.md
+++ b/_publications/2018-10-01-vlase-iros18.md
@@ -6,7 +6,7 @@ excerpt: 'This paper is about the number 3. The number 4 is left for future work
 date: 2018-10-01
 venue: 'IROS'
 paperurl: 'http://academicpages.github.io/files/paper3.pdf'
-citation: '<b>Yu, X.</b>, Chaturvedi, S., Feng, C., Taguchi, Y., Lee, T.Y., Fernandes, C. and Ramalingam, S., 2018, October. Vlase: Vehicle localization by aggregating semantic edges. In 2018 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (pp. 3196-3203). IEEE.'
+citation: '<b>Yu, X.</b>, Chaturvedi, S., Feng, C., Taguchi, Y., Lee, T.Y., Fernandes, C. and Ramalingam, S., 2018, October. Vlase: Vehicle localization by aggregating semantic edges. In 2018 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) (pp. 3196-3203). IEEE. (IROS 2018)'
 ---
 
 [Download paper here](http://yuxwind.github.io/files/vlase-iros2018.pdf)
